// user-service/user/user.proto
syntax = "proto3";

package go.micro.srv.article;

//import "google/protobuf/timestamp.proto";

service ArticleService {

    rpc GetOne (Id) returns (ArticleResponse) {
    }
    rpc GetMany (PageNumPageSize) returns (ArticleListResponse) {
    }
    rpc Post (Article) returns (IdResponse) {
    }
    rpc Put (Article) returns (Response) {
    }
    rpc Delete (Id) returns (Response) {
    }


}

// 用户信息
message Article {
    uint32 id = 1;
    uint32 userId = 2;
    string title = 3;
    string content = 4;
    string createTime = 5;
    string updateTime = 6;
}


message Id {
    uint32 id = 1;
}


message Response {
    int32 code = 1;
    string msg = 2;
}

message IdResponse {
    int32 code = 1;
    string msg = 2;

    uint32 id = 3;
}

message ArticleResponse {
    int32 code = 1;
    string msg = 2;

    Article article = 3;
}

message ArticleListResponse {
    int32 code = 1;
    string msg = 2;

    repeated Article articles = 3;
    PageMap page = 4;
}

message PageNumPageSize {
    int32 pageNum = 1;
    int32 pageSize = 2;
}

message PageMap {
    int32 pageNum = 1;
    int32 pageSize = 2;
    int32 count = 3;
}

